site change sliders

--- a/app/index.html
+++ b/app/index.html
@@ -134,9 +134,11 @@
             <!-- site__header-layout -->
             <div class="site__header-layout">
 
+                <!-- logo -->
                 <h1 class="logo">
                     <img src="img/logo.png" width="231" height="176" alt="">
                 </h1>
+                <!-- /logo -->
 
                 <!-- cart -->
                 <a href="#" class="cart">
@@ -245,7 +247,7 @@
 
                 <!-- slick-container -->
                 <div class="slick-container">
-                    <div class="slick-slide" style="background-image: url('pic/hero-cookies1.jpg')">
+                    <div class="slick-container__slide" style="background-image: url('pic/hero-cookies1.jpg')">
                         <div>
 
                             <!-- hero__info -->
@@ -261,7 +263,7 @@
 
                         </div>
                     </div>
-                    <div class="slick-slide" style="background-image: url('pic/hero-cookies2.jpg')">
+                    <div class="slick-container__slide" style="background-image: url('pic/hero-cookies2.jpg')">
                         <div>
 
                             <!-- hero__info -->
@@ -276,7 +278,7 @@
 
                         </div>
                     </div>
-                    <div class="slick-slide" style="background-image: url('pic/hero-cookies3.jpg')">
+                    <div class="slick-container__slide" style="background-image: url('pic/hero-cookies3.jpg')">
                         <div>
 
                             <!-- hero__info -->
