--- a/app/index.html
+++ b/app/index.html
@@ -113,7 +113,7 @@
 <body>
 
     <!-- site -->
-    <div class="site">
+    <div class="site site_index">
 
         <!-- preloader -->
         <div class="preloader">
@@ -177,10 +177,10 @@
                                 <a data-href="store-finder" href="#" class="site__menu-link">STORE FINDER</a>
                             </li>
                             <li>
-                                <a data-href="products-cookies" href="#" class="site__menu-link">SHOP</a>
+                                <a href="#" class="site__menu-link">SHOP</a>
                             </li>
                             <li>
-                                <a data-href="site" href="#" class="site__menu-link">CONTACT US</a>
+                                <a href="#" class="site__menu-link">CONTACT US</a>
                             </li>
                         </ul>
                     </nav>
