--- a/app/index.html
+++ b/app/index.html
@@ -113,7 +113,7 @@
 <body>
 
     <!-- site -->
-    <div class="site site_index">
+    <div class="site">
 
         <!-- preloader -->
         <div class="preloader">
@@ -1002,13 +1002,13 @@
                                 <!-- site__footer-menu -->
                                 <ul class="site__footer-menu">
                                     <li>
-                                        <a href="#">about matt’s cookies</a>
+                                        <a  data-href="about-us" href="#">about matt’s cookies</a>
                                     </li>
                                     <li>
-                                        <a href="#">the real stuff</a>
+                                        <a data-href="real-stuff" href="#">the real stuff</a>
                                     </li>
                                     <li>
-                                        <a href="#">store finder</a>
+                                        <a data-href="store-finder" href="#">store finder</a>
                                     </li>
                                     <li>
                                         <a href="#">privacy terms</a>
