--- a/app/index.html
+++ b/app/index.html
@@ -768,7 +768,7 @@
                                 </select>
                             </div>
                             <div class="store-finders__search">
-                                <button type="submit" class="btn btn_3"><span>Search</span></button>
+                                <button type="button" class="btn btn_3 popup__open" data-popup="store-finder"><span>Search</span></button>
                             </div>
 
                         </div>
@@ -910,8 +910,6 @@
 
             </div>
             <!-- /products-cookies -->
-
-            <!--<a href="#" class="popup__open btn" data-popup="store-finder"></a>-->
 
         </div>
         <!-- /site__content -->
