--- a/app/confirmation.html
+++ b/app/confirmation.html
@@ -480,44 +480,100 @@
 
                         <!-- sign-up__form -->
                         <div class="sign-up__form">
-                            <form action="#">
+                            <!--<form action="#">-->
 
-                                <!-- sign-up__text -->
-                                <div class="sign-up__text">
-                                    <p>SIGN UP FOR THE MATT'S COOKIE CLUB</p>
-                                    <p>WE DON'T EMAIL A TON, BUT WHEN WE DO</p>
-                                    <p>IT'S RIDICULOUSLY GOOD</p>
+                                <!--&lt;!&ndash; sign-up__text &ndash;&gt;-->
+                                <!--<div class="sign-up__text">-->
+                                    <!--<p>SIGN UP FOR THE MATT'S COOKIE CLUB</p>-->
+                                    <!--<p>WE DON'T EMAIL A TON, BUT WHEN WE DO</p>-->
+                                    <!--<p>IT'S RIDICULOUSLY GOOD</p>-->
+                                <!--</div>-->
+                                <!--&lt;!&ndash; /sign-up__text &ndash;&gt;-->
+
+                                <!--&lt;!&ndash; sign-up__input &ndash;&gt;-->
+                                <!--<div class="sign-up__input">-->
+                                    <!--<input type="email" class="site__input" placeholder="your e-mail" name="email">-->
+                                    <!--<span class="sign-up__error">please add your e-mail</span>-->
+                                <!--</div>-->
+                                <!--&lt;!&ndash; /sign-up__input &ndash;&gt;-->
+
+                                <!--<button class="btn btn_9" type="submit"><span>SIGN UP</span></button>-->
+
+                            <!--</form>-->
+
+                            <div class="sign-up__text">
+                                <p>SIGN UP FOR THE MATT'S COOKIE CLUB</p>
+                                <p>WE DON'T EMAIL A TON, BUT WHEN WE DO</p>
+                                <p>IT'S RIDICULOUSLY GOOD</p>
+                            </div>
+
+                            <div class="gf_browser_chrome gform_wrapper" id="gform_wrapper_1">
+                                <a id="gf_1" class="gform_anchor"></a>
+                                <form method="post" enctype="multipart/form-data" target="gform_ajax_frame_1" id="gform_1" action="/cart/#gf_1">
+                                <div class="gform_heading">
+                                    <h3 class="gform_title"></h3>
+                                    <span class="gform_description"></span>
                                 </div>
-                                <!-- /sign-up__text -->
-
-                                <!-- sign-up__input -->
-                                <div class="sign-up__input">
-                                    <input type="email" class="site__input" placeholder="your e-mail" name="email">
-                                    <span class="sign-up__error">please add your e-mail</span>
+                                <div class="gform_body">
+                                    <ul id="gform_fields_1" class="gform_fields top_label form_sublabel_below description_below">
+                                        <li id="field_1_1" class="gfield gfield_error field_sublabel_below field_description_below">
+                                            <label class="gfield_label" for="input_1_1">Subscribe email</label>
+                                            <div class="ginput_container ginput_container_email">
+                                                <input name="input_1" id="input_1_1" type="text" value="" class="medium" tabindex="1">
+                                            </div>
+                                            <div class="gfield_description validation_message">please add your e-mail</div></li>
+                                    </ul>
                                 </div>
-                                <!-- /sign-up__input -->
+                                <div class="gform_footer top_label">
+                                    <button class="btn btn_9 gform_button button" id="gform_submit_button_1" type="submit"><span>SIGN UP</span></button>
+                                    <input type="hidden" name="gform_ajax" value="form_id=1&amp;title=1&amp;description=1&amp;tabindex=1">
+                                    <input type="hidden" class="gform_hidden" name="is_submit_1" value="1">
+                                    <input type="hidden" class="gform_hidden" name="gform_submit" value="1">
 
-                                <button class="btn btn_9" type="submit"><span>SIGN UP</span></button>
+                                    <input type="hidden" class="gform_hidden" name="gform_unique_id" value="">
+                                    <input type="hidden" class="gform_hidden" name="state_1" value="WyJbXSIsIjRjNzgyNjQ4MjU1YjNmNDFjZjM3ZDZiN2Q0MGMzMTgyIl0=">
+                                    <input type="hidden" class="gform_hidden" name="gform_target_page_number_1" id="gform_target_page_number_1" value="0">
+                                    <input type="hidden" class="gform_hidden" name="gform_source_page_number_1" id="gform_source_page_number_1" value="1">
+                                    <input type="hidden" name="gform_field_values" value="">
 
+                                </div>
                             </form>
+                            </div>
+
                         </div>
                         <!-- /sign-up__form -->
 
-                        <!-- sign-up__success -->
-                        <div class="sign-up__success">
+                        <!--&lt;!&ndash; sign-up__success &ndash;&gt;-->
+                        <!--<div class="sign-up__success">-->
 
-                            <!-- sign-up__text -->
-                            <div class="sign-up__text">
-                                <p>THANK YOU!</p>
-                                YOU WERE SUCCESSFULLY SIGNED UP
-                                FOR THE MATT'S COOKIE CLUB
+                            <!--&lt;!&ndash; sign-up__text &ndash;&gt;-->
+                            <!--<div class="sign-up__text">-->
+                                <!--<p>THANK YOU!</p>-->
+                                <!--YOU WERE SUCCESSFULLY SIGNED UP-->
+                                <!--FOR THE MATT'S COOKIE CLUB-->
+                            <!--</div>-->
+                            <!--&lt;!&ndash; /sign-up__text &ndash;&gt;-->
+
+                            <!--<a href="#" class="btn btn_9 popup__cancel"><span>OK</span></a>-->
+
+                        <!--</div>-->
+                        <!--&lt;!&ndash; /sign-up__success &ndash;&gt;-->
+
+                        <div id="gforms_confirmation_message_1" class="gform_confirmation_message_1 gforms_confirmation_message">
+                            <meta charset="UTF-8">
+                            <div id="gform_confirmation_wrapper_1" class="gform_confirmation_wrapper ">
+                                <div id="gform_confirmation_message_1" class="gform_confirmation_message_1 gform_confirmation_message">
+                                    <div>
+                                        <p>THANK YOU!</p>
+                                        YOU WERE SUCCESSFULLY SIGNED UP
+                                        FOR THE MATT'S COOKIE CLUB
+                                    </div>
+
+
+                                    <a href="#" class="btn btn_9 popup__cancel"><span>OK</span></a>
+                                </div>
                             </div>
-                            <!-- /sign-up__text -->
-
-                            <a href="#" class="btn btn_9 popup__cancel"><span>OK</span></a>
-
                         </div>
-                        <!-- /sign-up__success -->
 
                     </div>
                     <!-- sign-up -->
