--- a/app/index.html
+++ b/app/index.html
@@ -768,7 +768,7 @@
                                 </select>
                             </div>
                             <div class="store-finders__search">
-                                <button type="button" class="btn btn_3 popup__open" data-popup="store-finder"><span>Search</span></button>
+                                <button type="button" class="btn btn_3 popup__open store-finders__search" data-popup="store-finder"><span>Search</span></button>
                             </div>
 
                         </div>
